# ChangeLog for media-fonts/dejavu
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.124 2008/12/21 17:48:39 pva Exp $

*dejavu-2.28 (21 Dec 2008)

  21 Dec 2008; Peter Volkov <pva@gentoo.org> -dejavu-2.25.ebuild,
  -dejavu-2.26.ebuild, +dejavu-2.28.ebuild:
  Version bump. Remove unused.

  07 Dec 2008; Mike Frysinger <vapier@gentoo.org> dejavu-2.26.ebuild,
  dejavu-2.27.ebuild:
  Add arm/s390/sh love #224541.

*dejavu-2.27 (29 Sep 2008)

  29 Sep 2008; Peter Volkov <pva@gentoo.org> -dejavu-2.23.ebuild,
  -dejavu-2.24.ebuild, -dejavu-2.25-r1.ebuild, +dejavu-2.27.ebuild:
  Version bump. Remove unused.

  17 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  12 Aug 2008; Peter Volkov <pva@gentoo.org> metadata.xml,
  +dejavu-2.26.ebuild:
  Version bump.

*dejavu-2.26 (12 Aug 2008)

  12 Aug 2008; Peter Volkov <pva@gentoo.org> +dejavu-2.26.ebuild:
  Version bump.

  18 Jun 2008; Peter Alfredsen <loki_val@gentoo.org> dejavu-2.25-r1.ebuild:
  Snapshot support

  12 Jun 2008; nixnut <nixnut@gentoo.org> dejavu-2.25-r1.ebuild:
  Added ~ppc wrt bug 224541

  06 Jun 2008; Peter Volkov <pva@gentoo.org> dejavu-2.25-r1.ebuild:
  keyword ~amd64, bug #224541

  05 Jun 2008; Raúl Porcel <armin76@gentoo.org> dejavu-2.25-r1.ebuild:
  Re-add ~alpha/~ia64/~sparc wrt #224541

  04 Jun 2008; Alexis Ballier <aballier@gentoo.org> dejavu-2.25-r1.ebuild:
  keyword ~x86-fbsd

  04 Jun 2008; Peter Alfredsen <loki_val@gentoo.org> dejavu-2.25-r1.ebuild:
  Update deps

  04 Jun 2008; Markus Rothe <corsair@gentoo.org> dejavu-2.25-r1.ebuild:
  Added ~ppc64; bug #224541

*dejavu-2.25-r1 (01 Jun 2008)

  01 Jun 2008; Peter Alfredsen <loki_val@gentoo.org> +dejavu-2.25-r1.ebuild:
  Commit masked version for keywording and testing

*dejavu-2.25 (19 May 2008)

  19 May 2008; Peter Volkov <pva@gentoo.org> +dejavu-2.25.ebuild:
  Version bump.
