@@ -6,6 +6,6 @@ DIST dejavu-fonts-ttf-2.28.tar.bz2 4315592 RMD160 4edf28f5e1832053cda0f57b21bd58
 DIST dejavu-ttf-2.21.tar.bz2 3568331 RMD160 c6f35bb8ec3b9949664c9ebe63bc58e5e0f693fe SHA1 5f3d3362cf4e6fc269f9d429ab9d25d095e8af48 SHA256 ee27f4d4d3675f6e25d1c37b5d87710f6292ad5dcb9992b6ea04736bb86648ae
 EBUILD dejavu-2.21.ebuild 757 RMD160 ddd7ae6b2697d1ef178eb68c7e77f029d0d4e223 SHA1 2186120b722717154aee246bb29d89f5c5b50039 SHA256 6174e2c11d8f9ce6dee87c66d0f427eeee31e1d04af846da59260a0a79b54fce
 EBUILD dejavu-2.27.ebuild 2499 RMD160 5d7e4bcbf7602fe3f8ee2f89d24e7be267d7ea2a SHA1 1df29bb38ba24a1885cc8c26f6e83814f2c35d30 SHA256 ac240bdcb3bee3aae6034f5b6cd764fdb662fbe4a1479ebfb53c9e3345878486
-EBUILD dejavu-2.28.ebuild 2496 RMD160 9ff60863e7af8a500883e96debe18a6f4d1511e3 SHA1 56c34424220f28108dfdf12ad2640f2e76fbd15d SHA256 62fa20314092230e1e9ca2895c7007d123d2925785f07a017494b98488c1732c
-MISC ChangeLog 15189 RMD160 f5e788b922254ccaf6215e60a47c67b8d017517e SHA1 c423c39f3d365a8ce8d9a3eb62aa6c3d6b15bff7 SHA256 60efc7e23a46438dd45eb47ae60aa2eccf90f3c7f1a59170d99eec1e5327597a
+EBUILD dejavu-2.28-r1.ebuild 2605 RMD160 7b4c1e53aa25ad964b5514d999bfff8326bc2c30 SHA1 2701d5df9a945d694ae7ac1b4fd6e504192c4a1d SHA256 54c60e87fd394ce45deff390ce844ac6c2aa4593ee94f4261710b4a5cab0cc12
+MISC ChangeLog 15369 RMD160 cb0d4e30feec7106a75e331424d070c577671652 SHA1 ab9faaf5f06d66a4cf19727023fc02c96079e981 SHA256 23e1715d44b50bed0dc4cb56c6a90afbedde9e9c42f3433bf9947eed095ff47a
 MISC metadata.xml 694 RMD160 4f1c69c4c179abdefb496068a44233ce4c8c9fb1 SHA1 88008d6e6e92ba0271b327bd7388419635f3d5d2 SHA256 bec5db29d577763884dfd7a7c017c6f81c4e5d59a56fd79cd0327bdfc9f2dbe2
