@@ -1,6 +1,12 @@
 # ChangeLog for media-fonts/dejavu
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.124 2008/12/21 17:48:39 pva Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.125 2009/01/21 03:58:03 dirtyepic Exp $
+
+*dejavu-2.28-r1 (21 Jan 2009)
+
+  21 Jan 2009; Ryan Hill <dirtyepic@gentoo.org> -dejavu-2.28.ebuild,
+  +dejavu-2.28-r1.ebuild:
+  Install fontconfig files again. Bug #253944.
 
 *dejavu-2.28 (21 Dec 2008)
 
